--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,4 +17,17 @@ body{
 #cabecera{
     background-color: #88D;
     color: white;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+    box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.75);
+}
+#cabecera #tagline{
+    padding: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+#post{
+    padding: 1em;
+
 }
